--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -91,7 +91,7 @@ h1, h2, h3, h4, h5, h6 {
 #header .logo img {
   padding: 0;
   margin: 0;
-  max-height: 150px;
+  max-height: 100px;
 }
 @media (max-width: 992px) {
   #header {
@@ -296,7 +296,7 @@ h1, h2, h3, h4, h5, h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/hero-bg.png");
+  background: #FEF626;
   position: relative;
 }
 #hero .hero-container {
@@ -1385,7 +1385,7 @@ section {
 # Footer
 --------------------------------------------------------------*/
 #footer {
-  background: url("../img/hero-bg.png") center center no-repeat;
+  background: #FEF626 center center no-repeat;
   color: #fff;
   font-size: 14px;
   position: relative;
@@ -1397,7 +1397,7 @@ section {
   right: 0;
   top: 0;
   bottom: 0;
-  background: rgba(0, 0, 0, 0.85);
+  background: rgba(0, 0, 0, 0.4);
   z-index: 1;
 }
 #footer .footer-top {
