--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -296,7 +296,7 @@ h1, h2, h3, h4, h5, h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: #FEF626;
+  background: #052256;
   position: relative;
 }
 #hero .hero-container {
@@ -1385,7 +1385,7 @@ section {
 # Footer
 --------------------------------------------------------------*/
 #footer {
-  background: #FEF626 center center no-repeat;
+  background: #052256 center center no-repeat;
   color: #fff;
   font-size: 14px;
   position: relative;
@@ -1397,7 +1397,6 @@ section {
   right: 0;
   top: 0;
   bottom: 0;
-  background: rgba(0, 0, 0, 0.4);
   z-index: 1;
 }
 #footer .footer-top {
